# Franka-arm-Telecontrol-via-Meta-Quest

./: README.md
franka_vr_control/Assets/: XRControllerPublisher.cs  frankavr.unity
franka_vr_control/Assets/Resources/: ROSConnectionPrefab.prefab
franka_vr_control/Assets/XR/: XRGeneralSettings.asset
franka_vr_control/Assets/XR/Settings/: Open VR Settings.asset  OpenXR Package Settings.asset
franka_vr_control/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
jetson_setup_scripts/src/franka_bringup/config/: controllers.yaml
jetson_setup_scripts/src/franka_cartesian_control/: CMakeLists.txt  package.xml
jetson_setup_scripts/src/franka_cartesian_control/src/: cartesian_pose_listener.cpp
jetson_setup_scripts/src/franka_example_controllers/resource/controller_interface/: franka_example_controllers.xml
jetson_setup_scripts/src/franka_fr3_moveit_config/config/: fr3_ros_controllers.yaml  kinematics.yaml
jetson_setup_scripts/src/franka_fr3_moveit_config/rviz/: moveit.rviz
jetson_setup_scripts/src/franka_vr_control/: CMakeLists.txt  package.xml
jetson_setup_scripts/src/franka_vr_control/src/: vr_cartesian_control.cpp
jetson_setup_scripts/src/vr_franka_interface/: CMakeLists.txt  package.xml  plugin_description.xml
jetson_setup_scripts/src/vr_franka_interface/include/vr_franka_interface/: vr_cartesian_controller.hpp
jetson_setup_scripts/src/vr_franka_interface/src/: cartesian_pose_listener.cpp  vr_cartesian_controller.cpp
keyboard_motion/: CMakeLists.txt  my_second_motion.cpp
